--- a/SizeOnDisk/Windows/MainWindow.xaml
+++ b/SizeOnDisk/Windows/MainWindow.xaml
@@ -25,8 +25,7 @@
         <ContextMenu x:Key="VMContextMenu" DataContext="{Binding PlacementTarget.SelectedItem, RelativeSource={RelativeSource Self}}"
                      ItemsSource="{Binding Details.FileCommands}" />
     </Window.Resources>
-    <DockPanel 
-        cmd:CommandBehavior.Context="{Binding SelectedRootFolder}">
+    <DockPanel cmd:CommandBehavior.Context="{Binding SelectedRootFolder}">
         <ToolBarTray DockPanel.Dock="Top">
             <ToolBar>
                 <Button cmd:CommandBehavior.Command="{x:Static vm:VMRootHierarchy.OpenFolderCommand}" Padding="3" />
@@ -144,8 +143,8 @@
                 </ControlTemplate>
             </Expander.Template>
             <Expander.Header>
-                <TextBox Text="{Binding SelectedRootFolder.SelectedListItem.Path,Mode=OneWay}"
-                             IsReadOnlyCaretVisible="True" IsReadOnly="True" />
+                <TextBox Text="{Binding SelectedRootFolder.SelectedListItem.Path,Mode=OneWay}" 
+                         IsReadOnlyCaretVisible="True" IsReadOnly="True" />
             </Expander.Header>
             <Grid cmd:GlobalizationBehavior.UpdateChildsBindings=",UISize">
                 <Grid.Resources>
@@ -273,7 +272,7 @@
             <Separator Grid.Column="1" />
             <StatusBarItem Grid.Column="2"
                            Content="{Binding SelectedRootFolder.RunTime}" />
-
+            
             <StatusBarItem Grid.Column="6"
                            Content="{Binding SelectedRootFolder.SelectedTreeItem.Folders.Count}"
                            ContentStringFormat="N0"
@@ -334,10 +333,10 @@
                             <ColumnDefinition Width="Auto" />
                         </Grid.ColumnDefinitions>
                         <TreeView BorderThickness="1"
-                              ItemsSource="{Binding DummyMe}"
-                              ContextMenu="{StaticResource VMContextMenu}"
-                              DisplayMemberPath="Name"
-                              cmd:ControlBehavior.FocusMouseRightButtonDown="True">
+                                  ItemsSource="{Binding DummyMe}"
+                                  ContextMenu="{StaticResource VMContextMenu}"
+                                  DisplayMemberPath="Name"
+                                  cmd:ControlBehavior.FocusMouseRightButtonDown="True">
                             <TreeView.ItemContainerStyle>
                                 <Style TargetType="{x:Type TreeViewItem}">
                                     <Setter Property="cmd:TreeViewItemBehavior.IsBroughtIntoViewWhenSelected" Value="True" />
@@ -362,14 +361,14 @@
                           Background="Transparent"
                           VerticalAlignment="Stretch" />
                         <ListView Grid.Column="2" MinWidth="25"
-                                ItemsSource="{Binding SelectedTreeItem.Childs}"
-                                BorderThickness="1"
-                                SelectedItem="{Binding SelectedItem}"
-                                ScrollViewer.HorizontalScrollBarVisibility="Disabled"
-                                ContextMenu="{StaticResource VMContextMenu}"
-                                cmd:SelectorBehavior.SyncIsSelectedWhenSelected="IsSelected"
+                                  ItemsSource="{Binding SelectedTreeItem.Childs}"
+                                  BorderThickness="1"
+                                  SelectedItem="{Binding SelectedItem}"
+                                  ScrollViewer.HorizontalScrollBarVisibility="Disabled"
+                                  ContextMenu="{StaticResource VMContextMenu}"
+                                  cmd:SelectorBehavior.SyncIsSelectedWhenSelected="IsSelected"
                                   cmd:SelectorBehavior.IsBroughtIntoViewWhenSelected="True"
-                                Panel.ZIndex="{Binding ViewMode, Mode=OneWay, Converter={StaticResource IsEqualConverter}, ConverterParameter={x:Static vm:VMViewMode.Tile}}">
+                                  Panel.ZIndex="{Binding ViewMode, Mode=OneWay, Converter={StaticResource IsEqualConverter}, ConverterParameter={x:Static vm:VMViewMode.Tile}}">
                             <ListView.Resources>
                                 <Style TargetType="ListViewItem">
                                     <Setter Property="IsSelected" Value="{Binding IsSelected, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
@@ -398,23 +397,22 @@
                                 </DataTemplate>
                             </ListView.ItemTemplate>
                         </ListView>
-                        <DataGrid 
-                                cmd:GlobalizationBehavior.UpdateItemsDefaultView=",UISize"
-                                Grid.Column="2"
-                                VirtualizingStackPanel.VirtualizationMode="Standard"
-                                cmd:SelectorBehavior.SyncIsSelectedWhenSelected="IsSelected"
-                                cmd:SelectorBehavior.IsBroughtIntoViewWhenSelected="True"
-                                BorderThickness="1"
-                                HeadersVisibility="Column"
-                                ItemsSource="{Binding SelectedTreeItem.Childs}"
-                                SelectedItem="{Binding SelectedItem}"
-                                AutoGenerateColumns="False"
-                                Background="{DynamicResource {x:Static SystemColors.WindowBrushKey}}"
-                                ContextMenu="{StaticResource VMContextMenu}"
-                                HorizontalGridLinesBrush="{DynamicResource {x:Static SystemColors.ControlLightBrushKey}}"
-                                VerticalGridLinesBrush="{DynamicResource {x:Static SystemColors.ControlLightBrushKey}}"
-                                ClipboardCopyMode="IncludeHeader"
-                                Panel.ZIndex="{Binding ViewMode, Mode=OneWay, Converter={StaticResource IsEqualConverter}, ConverterParameter={x:Static vm:VMViewMode.Details}}">
+                        <DataGrid cmd:GlobalizationBehavior.UpdateItemsDefaultView=",UISize"
+                                  Grid.Column="2"
+                                  VirtualizingStackPanel.VirtualizationMode="Standard"
+                                  cmd:SelectorBehavior.SyncIsSelectedWhenSelected="IsSelected"
+                                  cmd:SelectorBehavior.IsBroughtIntoViewWhenSelected="True"
+                                  BorderThickness="1"
+                                  HeadersVisibility="Column"
+                                  ItemsSource="{Binding SelectedTreeItem.Childs}"
+                                  SelectedItem="{Binding SelectedItem}"
+                                  AutoGenerateColumns="False"
+                                  Background="{DynamicResource {x:Static SystemColors.WindowBrushKey}}"
+                                  ContextMenu="{StaticResource VMContextMenu}"
+                                  HorizontalGridLinesBrush="{DynamicResource {x:Static SystemColors.ControlLightBrushKey}}"
+                                  VerticalGridLinesBrush="{DynamicResource {x:Static SystemColors.ControlLightBrushKey}}"
+                                  ClipboardCopyMode="IncludeHeader"
+                                  Panel.ZIndex="{Binding ViewMode, Mode=OneWay, Converter={StaticResource IsEqualConverter}, ConverterParameter={x:Static vm:VMViewMode.Details}}">
                             <DataGrid.Resources>
                                 <Style x:Key="RightAlignStyle" TargetType="{x:Type TextBlock}">
                                     <Setter Property="TextAlignment" Value="Right" />
@@ -498,21 +496,22 @@
                                   ResizeDirection="Columns"
                                   Width="6"
                                   Background="Transparent"
-                                  VerticalAlignment="Stretch" 
-                                   />
+                                  VerticalAlignment="Stretch" />
                             <DataGrid Grid.Column="1"
-                                ColumnWidth="175"
-                                ItemsSource="{Binding SelectedItem.Details.Properties, IsAsync=True}"
-                                AutoGenerateColumns="False"
-                                BorderThickness="1"
-                                HeadersVisibility="Column"
-                                HorizontalGridLinesBrush="{DynamicResource {x:Static SystemColors.ControlLightBrushKey}}"
-                                VerticalGridLinesBrush="{DynamicResource {x:Static SystemColors.ControlLightBrushKey}}"
-                                IsReadOnly="True" EnableRowVirtualization="False" SelectionUnit="Cell">
+                                      ColumnWidth="175"
+                                      ItemsSource="{Binding SelectedItem.Details.Properties, IsAsync=True}"
+                                      AutoGenerateColumns="False"
+                                      BorderThickness="1"
+                                      HeadersVisibility="Column"
+                                      HorizontalGridLinesBrush="{DynamicResource {x:Static SystemColors.ControlLightBrushKey}}"
+                                      VerticalGridLinesBrush="{DynamicResource {x:Static SystemColors.ControlLightBrushKey}}"
+                                      IsReadOnly="True"
+                                      EnableRowVirtualization="False"
+                                      SelectionUnit="Cell">
                                 <DataGrid.Columns>
                                     <DataGridTextColumn Width="175" Header="Name" Binding="{Binding Name}" />
                                     <DataGridTextColumn Width="175" Header="Value" Binding="{Binding Value}" />
-                                </DataGrid.Columns>                                
+                                </DataGrid.Columns>
                             </DataGrid>
                         </Grid>
                     </Grid>
