Copu contextmenu for grid ans just copy for textboxes. Next step, replace textboxes with textblocks the would copy all text content

--- a/SizeOnDisk/Themes/Generic.xaml
+++ b/SizeOnDisk/Themes/Generic.xaml
@@ -33,4 +33,10 @@
             <Setter Property="ToolTip" Value="{Binding Name}" />
         </Style.Setters>
     </Style>
+    <ContextMenu x:Key="DefaultCopyMenu">
+        <MenuItem Command="Copy" />
+    </ContextMenu>
+    <Style TargetType="TextBox">
+        <Setter Property="ContextMenu" Value="{StaticResource DefaultCopyMenu}" />
+    </Style>
 </ResourceDictionary>
