--- a/SizeOnDisk/Windows/MainWindow.xaml
+++ b/SizeOnDisk/Windows/MainWindow.xaml
@@ -22,7 +22,8 @@
         <vm:VMRootHierarchy />
     </Window.DataContext>
     <Window.Resources>
-        <ContextMenu x:Key="VMContextMenu" DataContext="{Binding PlacementTarget.SelectedItem, RelativeSource={RelativeSource Self}}"
+        <ContextMenu x:Key="VMContextMenu"
+                     DataContext="{Binding PlacementTarget.SelectedItem, RelativeSource={RelativeSource Self}}"
                      ItemsSource="{Binding Details.FileCommands}" />
     </Window.Resources>
     <DockPanel cmd:CommandBehavior.Context="{Binding SelectedRootFolder}">
@@ -71,7 +72,16 @@
                 <ControlTemplate TargetType="{x:Type Expander}">
                     <Border BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}" Background="{TemplateBinding Background}" CornerRadius="3">
                         <DockPanel>
-                            <ToggleButton x:Name="HeaderSite" ContentTemplate="{TemplateBinding HeaderTemplate}" Content="{TemplateBinding Header}" DockPanel.Dock="Top" Foreground="{TemplateBinding Foreground}" FontWeight="{TemplateBinding FontWeight}" FontStyle="{TemplateBinding FontStyle}" FontStretch="{TemplateBinding FontStretch}" FontSize="{TemplateBinding FontSize}" FontFamily="{TemplateBinding FontFamily}" HorizontalContentAlignment="{TemplateBinding HorizontalContentAlignment}" IsChecked="{Binding IsExpanded, Mode=TwoWay, RelativeSource={RelativeSource TemplatedParent}}" Margin="0" MinWidth="0" MinHeight="0" Padding="0" VerticalContentAlignment="{TemplateBinding VerticalContentAlignment}">
+                            <ToggleButton x:Name="HeaderSite" ContentTemplate="{TemplateBinding HeaderTemplate}" 
+                                          Content="{TemplateBinding Header}"
+                                          DockPanel.Dock="Top" 
+                                          Foreground="{TemplateBinding Foreground}" 
+                                          FontWeight="{TemplateBinding FontWeight}" 
+                                          FontStyle="{TemplateBinding FontStyle}" 
+                                          FontStretch="{TemplateBinding FontStretch}" 
+                                          FontSize="{TemplateBinding FontSize}" 
+                                          FontFamily="{TemplateBinding FontFamily}" 
+                                          HorizontalContentAlignment="{TemplateBinding HorizontalContentAlignment}" IsChecked="{Binding IsExpanded, Mode=TwoWay, RelativeSource={RelativeSource TemplatedParent}}" Margin="0" MinWidth="0" MinHeight="0" Padding="0" VerticalContentAlignment="{TemplateBinding VerticalContentAlignment}">
                                 <ToggleButton.FocusVisualStyle>
                                     <Style>
                                         <Setter Property="Control.Template">
@@ -145,19 +155,13 @@
             <Expander.Header>
                 <TextBox Text="{Binding SelectedRootFolder.SelectedListItem.Path,Mode=OneWay}" 
                          IsReadOnlyCaretVisible="True" 
-                         IsReadOnly="True" />
+                         IsReadOnly="True" 
+                         Style="{StaticResource CopyTextBox}" />
             </Expander.Header>
-            <Grid cmd:GlobalizationBehavior.UpdateChildsBindings=",UISize">
+            <Grid>
                 <Grid.Resources>
-                    <Style TargetType="{x:Type TextBox}">
-                        <Setter Property="BorderThickness" Value="0" />
-                        <Setter Property="Margin" Value="0" />
-                        <Setter Property="IsReadOnly" Value="True" />
-                        <Setter Property="IsReadOnlyCaretVisible" Value="True" />
-                    </Style>
-                    <Style TargetType="{x:Type TextBlock}">
-                        <Setter Property="HorizontalAlignment" Value="Right" />
-                        <Setter Property="Margin" Value="5,0" />
+                    <Style BasedOn="{StaticResource CopyTextBlock}" TargetType="{x:Type TextBlock}">
+                        <Setter Property="Margin" Value="2,0" />
                     </Style>
                 </Grid.Resources>
                 <Grid.ColumnDefinitions>
@@ -178,61 +182,61 @@
                     <RowDefinition />
                     <RowDefinition />
                 </Grid.RowDefinitions>
-                <TextBox Grid.ColumnSpan="2" HorizontalAlignment="Center" Text="{Binding SelectedRootFolder.HardDrivePath, Mode=OneWay}" />
-                <TextBlock Grid.Row="1" Text="Hard drive size" />
-                <TextBox Grid.Row="1" Grid.Column="1" Text="{Binding SelectedRootFolder.HardDriveSize,Converter={conv:SizeConverter}, Mode=OneWay}" />
-                <TextBlock Grid.Row="2" Text="{lex:Loc HardDriveUsage}" />
-                <TextBox Grid.Row="2" Grid.Column="1" Text="{Binding SelectedRootFolder.HardDriveUsage,Converter={conv:SizeConverter}, Mode=OneWay}" />
-                <TextBlock Grid.Row="3" Text="{lex:Loc HardDriveFree}" />
-                <TextBox Grid.Row="3" Grid.Column="1" Text="{Binding SelectedRootFolder.HardDriveFree,Converter={conv:SizeConverter}, Mode=OneWay}" />
+                <TextBlock Grid.ColumnSpan="2" HorizontalAlignment="Center" Text="{Binding SelectedRootFolder.HardDrivePath, Mode=OneWay}" />
+                <TextBlock HorizontalAlignment="Right" Grid.Row="1" Text="Hard drive size" />
+                <TextBlock Grid.Row="1" Grid.Column="1" Text="{Binding SelectedRootFolder.HardDriveSize,Converter={conv:SizeConverter}, Mode=OneWay}" />
+                <TextBlock HorizontalAlignment="Right" Grid.Row="2" Text="{lex:Loc HardDriveUsage}" />
+                <TextBlock Grid.Row="2" Grid.Column="1" Text="{Binding SelectedRootFolder.HardDriveUsage,Converter={conv:SizeConverter}, Mode=OneWay}" />
+                <TextBlock HorizontalAlignment="Right" Grid.Row="3" Text="{lex:Loc HardDriveFree}" />
+                <TextBlock Grid.Row="3" Grid.Column="1" Text="{Binding SelectedRootFolder.HardDriveFree,Converter={conv:SizeConverter}, Mode=OneWay}" />
 
-                <TextBlock Grid.Row="5" Text="Status" />
-                <TextBox Grid.Row="5" Grid.Column="1" Text="{Binding SelectedRootFolder.ExecutionState, Converter={conv:IsRunningConverter}, FallbackValue=..., Mode=OneWay}" />
-                <TextBlock Grid.Row="6" Text="Running time" />
-                <TextBox Grid.Row="6" Grid.Column="1" Text="{Binding SelectedRootFolder.RunTime, Mode=OneWay}" />
-                <TextBlock Grid.Row="7" Text="Threads" />
-                <TextBox Grid.Row="7" Grid.Column="1" Text="{Binding RunningThreads, Mode=OneWay}" />
+                <TextBlock HorizontalAlignment="Right" Grid.Row="5" Text="Status" />
+                <TextBlock Grid.Row="5" Grid.Column="1" Text="{Binding SelectedRootFolder.ExecutionState, Converter={conv:IsRunningConverter}, FallbackValue=..., Mode=OneWay}" />
+                <TextBlock HorizontalAlignment="Right" Grid.Row="6" Text="Running time" />
+                <TextBlock Grid.Row="6" Grid.Column="1" Text="{Binding SelectedRootFolder.RunTime, Mode=OneWay}" />
+                <TextBlock HorizontalAlignment="Right" Grid.Row="7" Text="Threads" />
+                <TextBlock Grid.Row="7" Grid.Column="1" Text="{Binding RunningThreads, Mode=OneWay}" />
 
-                <TextBox Grid.Column="2" Grid.ColumnSpan="2" HorizontalAlignment="Center" Text="{Binding SelectedRootFolder.Path, Mode=OneWay}" />
-                <TextBlock Grid.Row="1" Grid.Column="2" Text="Total file size" />
-                <TextBox Grid.Row="1" Grid.Column="3" Text="{Binding SelectedRootFolder.FileSize,Converter={conv:SizeConverter}, Mode=OneWay}" />
-                <TextBlock Grid.Row="2" Grid.Column="2" Text="Total disk size" />
-                <TextBox Grid.Row="2" Grid.Column="3" Text="{Binding SelectedRootFolder.DiskSize,Converter={conv:SizeConverter}, Mode=OneWay}" />
-                <TextBlock Grid.Row="3" Grid.Column="2" Text="Total number of folders" />
-                <TextBox Grid.Row="3" Grid.Column="3" Text="{Binding SelectedRootFolder.FolderTotal, StringFormat=N0, Mode=OneWay}" />
-                <TextBlock Grid.Row="4" Grid.Column="2" Text="Total number of files" />
-                <TextBox Grid.Row="4" Grid.Column="3" Text="{Binding SelectedRootFolder.FileTotal, StringFormat=N0, Mode=OneWay}" />
-                <TextBlock Grid.Row="5" Grid.Column="2" Text="Number of folders" />
-                <TextBox Grid.Row="5" Grid.Column="3" Text="{Binding SelectedRootFolder.Folders.Count, StringFormat=N0, Mode=OneWay}" />
-                <TextBlock Grid.Row="6" Grid.Column="2" Text="Number of files" />
-                <TextBox Grid.Row="6" Grid.Column="3" Text="{Binding SelectedRootFolder.FileCount, StringFormat=N0, Mode=OneWay}" />
-                <TextBlock Grid.Row="7" Grid.Column="2" Text="Number of items" />
-                <TextBox Grid.Row="7" Grid.Column="3" Text="{Binding SelectedRootFolder.Childs.Count, StringFormat=N0, Mode=OneWay}" />
+                <TextBlock Grid.Column="2" Grid.ColumnSpan="2" HorizontalAlignment="Center" Text="{Binding SelectedRootFolder.Path, Mode=OneWay}" />
+                <TextBlock HorizontalAlignment="Right" Grid.Row="1" Grid.Column="2" Text="Total file size" />
+                <TextBlock Grid.Row="1" Grid.Column="3" Text="{Binding SelectedRootFolder.FileSize,Converter={conv:SizeConverter}, Mode=OneWay}" />
+                <TextBlock HorizontalAlignment="Right" Grid.Row="2" Grid.Column="2" Text="Total disk size" />
+                <TextBlock Grid.Row="2" Grid.Column="3" Text="{Binding SelectedRootFolder.DiskSize,Converter={conv:SizeConverter}, Mode=OneWay}" />
+                <TextBlock HorizontalAlignment="Right" Grid.Row="3" Grid.Column="2" Text="Total number of folders" />
+                <TextBlock Grid.Row="3" Grid.Column="3" Text="{Binding SelectedRootFolder.FolderTotal, StringFormat=N0, Mode=OneWay}" />
+                <TextBlock HorizontalAlignment="Right" Grid.Row="4" Grid.Column="2" Text="Total number of files" />
+                <TextBlock Grid.Row="4" Grid.Column="3" Text="{Binding SelectedRootFolder.FileTotal, StringFormat=N0, Mode=OneWay}" />
+                <TextBlock HorizontalAlignment="Right" Grid.Row="5" Grid.Column="2" Text="Number of folders" />
+                <TextBlock Grid.Row="5" Grid.Column="3" Text="{Binding SelectedRootFolder.Folders.Count, StringFormat=N0, Mode=OneWay}" />
+                <TextBlock HorizontalAlignment="Right" Grid.Row="6" Grid.Column="2" Text="Number of files" />
+                <TextBlock Grid.Row="6" Grid.Column="3" Text="{Binding SelectedRootFolder.FileCount, StringFormat=N0, Mode=OneWay}" />
+                <TextBlock HorizontalAlignment="Right" Grid.Row="7" Grid.Column="2" Text="Number of items" />
+                <TextBlock Grid.Row="7" Grid.Column="3" Text="{Binding SelectedRootFolder.Childs.Count, StringFormat=N0, Mode=OneWay}" />
 
-                <TextBox Grid.Column="4" Grid.ColumnSpan="2" HorizontalAlignment="Center" Text="{Binding SelectedRootFolder.SelectedTreeItem.Path, Mode=OneWay}" />
-                <TextBlock Grid.Row="1" Grid.Column="4" Text="Total file size" />
-                <TextBox Grid.Row="1" Grid.Column="5" Text="{Binding SelectedRootFolder.SelectedTreeItem.FileSize,Converter={conv:SizeConverter}, Mode=OneWay}" />
-                <TextBlock Grid.Row="2" Grid.Column="4" Text="Total disk size" />
-                <TextBox Grid.Row="2" Grid.Column="5" Text="{Binding SelectedRootFolder.SelectedTreeItem.DiskSize,Converter={conv:SizeConverter}, Mode=OneWay}" />
-                <TextBlock Grid.Row="3" Grid.Column="4" Text="Total number of folders" />
-                <TextBox Grid.Row="3" Grid.Column="5" Text="{Binding SelectedRootFolder.SelectedTreeItem.FolderTotal, StringFormat=N0, Mode=OneWay}" />
-                <TextBlock Grid.Row="4" Grid.Column="4" Text="Total number of files" />
-                <TextBox Grid.Row="4" Grid.Column="5" Text="{Binding SelectedRootFolder.SelectedTreeItem.FileTotal, StringFormat=N0, Mode=OneWay}" />
-                <TextBlock Grid.Row="5" Grid.Column="4" Text="Number of folders" />
-                <TextBox Grid.Row="5" Grid.Column="5" Text="{Binding SelectedRootFolder.SelectedTreeItem.Folders.Count, StringFormat=N0, Mode=OneWay}" />
-                <TextBlock Grid.Row="6" Grid.Column="4" Text="Number of files" />
-                <TextBox Grid.Row="6" Grid.Column="5" Text="{Binding SelectedRootFolder.SelectedTreeItem.FileCount, StringFormat=N0, Mode=OneWay}" />
-                <TextBlock Grid.Row="7" Grid.Column="4" Text="Number of items" />
-                <TextBox Grid.Row="7" Grid.Column="5" Text="{Binding SelectedRootFolder.SelectedTreeItem.Childs.Count, StringFormat=N0, Mode=OneWay}" />
+                <TextBlock Grid.Column="4" Grid.ColumnSpan="2" HorizontalAlignment="Center" Text="{Binding SelectedRootFolder.SelectedTreeItem.Path, Mode=OneWay}" />
+                <TextBlock HorizontalAlignment="Right" Grid.Row="1" Grid.Column="4" Text="Total file size" />
+                <TextBlock Grid.Row="1" Grid.Column="5" Text="{Binding SelectedRootFolder.SelectedTreeItem.FileSize,Converter={conv:SizeConverter}, Mode=OneWay}" />
+                <TextBlock HorizontalAlignment="Right" Grid.Row="2" Grid.Column="4" Text="Total disk size" />
+                <TextBlock Grid.Row="2" Grid.Column="5" Text="{Binding SelectedRootFolder.SelectedTreeItem.DiskSize,Converter={conv:SizeConverter}, Mode=OneWay}" />
+                <TextBlock HorizontalAlignment="Right" Grid.Row="3" Grid.Column="4" Text="Total number of folders" />
+                <TextBlock Grid.Row="3" Grid.Column="5" Text="{Binding SelectedRootFolder.SelectedTreeItem.FolderTotal, StringFormat=N0, Mode=OneWay}" />
+                <TextBlock HorizontalAlignment="Right" Grid.Row="4" Grid.Column="4" Text="Total number of files" />
+                <TextBlock Grid.Row="4" Grid.Column="5" Text="{Binding SelectedRootFolder.SelectedTreeItem.FileTotal, StringFormat=N0, Mode=OneWay}" />
+                <TextBlock HorizontalAlignment="Right" Grid.Row="5" Grid.Column="4" Text="Number of folders" />
+                <TextBlock Grid.Row="5" Grid.Column="5" Text="{Binding SelectedRootFolder.SelectedTreeItem.Folders.Count, StringFormat=N0, Mode=OneWay}" />
+                <TextBlock HorizontalAlignment="Right" Grid.Row="6" Grid.Column="4" Text="Number of files" />
+                <TextBlock Grid.Row="6" Grid.Column="5" Text="{Binding SelectedRootFolder.SelectedTreeItem.FileCount, StringFormat=N0, Mode=OneWay}" />
+                <TextBlock HorizontalAlignment="Right" Grid.Row="7" Grid.Column="4" Text="Number of items" />
+                <TextBlock Grid.Row="7" Grid.Column="5" Text="{Binding SelectedRootFolder.SelectedTreeItem.Childs.Count, StringFormat=N0, Mode=OneWay}" />
             </Grid>
         </Expander>
         <StatusBar DockPanel.Dock="Bottom"
-                   Grid.Row="3"
-                   cmd:GlobalizationBehavior.UpdateItemsBindings=",UISize">
+                   Grid.Row="3">
             <StatusBar.Resources>
-                <Style x:Key="{x:Type StatusBarItem}" TargetType="StatusBarItem">
+                <Style TargetType="{x:Type StatusBarItem}" BasedOn="{StaticResource {x:Type StatusBarItem}}">
                     <Setter Property="Padding" Value="4,2,4,3" />
                 </Style>
+                <Style TargetType="{x:Type TextBlock}" BasedOn="{StaticResource CopyTextBlock}" />
             </StatusBar.Resources>
             <StatusBar.ItemsPanel>
                 <ItemsPanelTemplate>
@@ -357,7 +361,7 @@
                         <GridSplitter Grid.Column="1"
                           ResizeBehavior="PreviousAndNext"
                           ResizeDirection="Columns"
-                          Width="6"
+                          Width="5"
                           Background="Transparent"
                           VerticalAlignment="Stretch" />
                         <ListView Grid.Column="2" MinWidth="25"
@@ -421,17 +425,6 @@
                                     <Setter Property="IsSelected" Value="{Binding IsSelected, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
                                     <EventSetter Event="MouseDoubleClick" Handler="Selector_MouseDoubleClick"/>
                                 </Style>
-                                <Style TargetType="DataGridCell">
-                                    <Setter Property="Template">
-                                        <Setter.Value>
-                                            <ControlTemplate TargetType="{x:Type DataGridCell}">
-                                                <Border Padding="{TemplateBinding Padding}" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}" Background="{TemplateBinding Background}" SnapsToDevicePixels="True">
-                                                    <ContentPresenter SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}"/>
-                                                </Border>
-                                            </ControlTemplate>
-                                        </Setter.Value>
-                                    </Setter>
-                                </Style>
                             </DataGrid.Resources>
                             <DataGrid.Columns>
                                 <DataGridTemplateColumn SortMemberPath="IsFile" IsReadOnly="True">
@@ -494,11 +487,12 @@
                             <GridSplitter
                                   ResizeBehavior="CurrentAndNext"
                                   ResizeDirection="Columns"
-                                  Width="6"
+                                  Width="5"
                                   Background="Transparent"
                                   VerticalAlignment="Stretch" />
                             <DataGrid Grid.Column="1"
                                       ColumnWidth="175"
+                                      cmd:GlobalizationBehavior.UpdateItemsDefaultView=",UISize"
                                       ItemsSource="{Binding SelectedItem.Details.Properties, IsAsync=True}"
                                       AutoGenerateColumns="False"
                                       BorderThickness="1"
